--- a/app/base.html
+++ b/app/base.html
@@ -417,8 +417,8 @@
 
       // Create info display
       $("#oven-name-display-" + (ovenNumber)).html("Name: " + $("#oven-name-" + ovenNumber).val());
-      $("#oven-temperature-display-" + (ovenNumber)).html("Temperature: " + $("#oven-temperature-" + ovenNumber).val());
-      $("#oven-time-display-" + (ovenNumber)).html("Time: " + $("#oven-time-" + ovenNumber).val());
+      $("#oven-temperature-display-" + (ovenNumber)).html("Temperature: " + $("#oven-temperature-" + ovenNumber).val() + " °C");
+      $("#oven-time-display-" + (ovenNumber)).html("Time: " + $("#oven-time-" + ovenNumber).val() + " minutes");
 
 
       // Create grid
